# droplet

./: .gitignore  CHANGELOG.md  LICENSE  README.OpenSource  README.en.md  README.md  build-profile.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
cjdroplet/: BuildProfile.ets  oh-package.json5
cjdroplet/cpp/: gl_wrapper.cpp  shader_str.h
cjdroplet/src/main/: module.json5
cjdroplet/src/main/cangjie/: cjpm.toml
cjdroplet/src/main/cpp/: gl_wrapper.cpp  gl_wrapper.h  shader_str.h
doc/: design.md  feature_api.md
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/cj_res/: cjpm.toml
entry/cj_res/src/: AppR.cj  SysR.cj
entry/src/main/: module.json5
entry/src/main/cangjie/: cjpm.toml
entry/src/main/cangjie/src/: Test001.cj  Test002.cj  Test004.cj  Test005.cj  Test008.cj  Test009.cj  Test010.cj  Test011.cj  Test012.cj  Test014.cj  Test015.cj  Test017.cj  Test019.cj  Test021.cj  Test022.cj  Test023.cj  Test024.cj  Test025.cj  Test027.cj  Test029.cj  Test030.cj  Test035.cj  Test036.cj  Test038.cj  Test039.cj  Test040.cj  Test041.cj  TestCacheStrategyData.cj  TestCacheStrategyResource.cj  TestCenterCrop.cj  TestContrastFilter.cj  TestFastBlur.cj  TestFitCenter.cj  TestGranularRound.cj  TestJpg.cj  TestKuwaharaFilter.cj  TestLifeCycler.cj  TestNoAnimList.cj  (+210 more)
entry/src/main/cpp/: CMakeLists.txt  Makefile  gl_wrapper.cpp  gl_wrapper.h  shader_str.h
hvigor/: cangjie-build-support-0.5.5.tgz  cangjie-build-support-4.2.0-cj.2.tgz  cangjie-build-support-4.3.1-cj.2.tgz  hvigor-config.json5
(+279 files in other folders)
